--- a/chinamap.html
+++ b/chinamap.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">  
         <title>China Map</title>  
         <link rel="stylesheet" type="text/css" href="map.css">
+    
+        <script type="text/javascript" src=https://d3js.org/d3.v3.min.js></script>
   </head> 
 <style>
 
 </style>
 <body>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    
     <div id="title" class="title" align="center">
         <h1 >China Population,GDP,and GDP Per Capita: Provinces and 10 Famous Cities, 2014</h1>
         <HR SIZE=3></HR>
