--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">  
         <title>China Map</title>  
         <link rel="stylesheet" type="text/css" href="map.css">
+    <script type="text/javascript" src=https://d3js.org/d3.v3.min.js></script>
   </head> 
 <style>
 
 </style>
 <body>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
     
     <div id="title" class="title" align="center">
         <h1 >China Population,GDP,and GDP Per Capita: Provinces and 10 Famous Cities, 2014</h1>
