--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <div id="title" class="title" align="center">
         <h1 >China : Population and GDP, 2014</h1>
 <!--        <HR SIZE=3></HR>-->
-        <p>We designed an interactive website to show the relationship between province, famous cities and GDP using data from 2014. According to the data from 2014, Chinese economy relays on population and geographic location. Chinese population is concentrated in eastern coastal areas in several famous cities with a high population density. Chinese GDP is proportional to population, as population increases the GDP also increases.</p>
+        <p>Chinese population is concentrated in eastern coastal areas in several famous cities with a high population density.</p>
     </div>
     <script src="map.js" >
     </script>
     <br><br>
     <div id="ending" class="ending" transform="translate(0,0)">
         <div id="endingtext" align="left">
-            <div id="createdBy">Created by: <br> 
+            <div id="createdBy">Created by:
                 <a>Wentian Bai, Wentan Bai and Jiahua You in collaboration with Suresh K Lodha, Ryan Brounley, and Shobhit Maheshwari.</a>
                 <br><br>
             </div>
-            <div id="createdFor">Created for:<br> 
+            <div id="createdFor">Created for:
                 <a>CMPS165, Data Programming for Visualization, Fall 2016</a>
                 <br><br>
             </div>
